add the rest of components for mini project